--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: m7db
 description: A Dart simple Api to helps working with sqlite .
 version: 0.0.1
 author:
-homepage:
+homepage: https://github.com/a3bd2lra7man/m7_db
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -11,7 +11,6 @@ dependencies:
   flutter:
     sdk: flutter
   sqflite: ^1.3.0
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
