--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,11 @@
 name: m7db
-description: A Dart simple Api to helps working with sqlite .
-version: 0.0.2
+description: A Simple Package that helps to deal with sqlite in simple way
+
+  it's mean purpose to gives an abstract DAO class that provides the four CRUD operation plus common other transaction
+
+  and remove redundant code that's we repeated in every project
+
+version: 0.0.3
 author:
 homepage: https://github.com/a3bd2lra7man/m7_db
 
